# credit-risk-modelling

./: README.md  pyproject.toml  submission.md
config/: main.yaml
config/project/: lgd_model.yaml  pd_model.yaml
experiments/: eda.ipynb  lgd.ipynb  testing.ipynb
models/: inference_pipeline.joblib  one_hot_encoder.joblib  ordinal_encoder.joblib  robust_scaler.joblib  xgboost_model.joblib
presentation/: interpretability_lgd.ipynb  interpretability_pd.ipynb
src/: app.py  data_load.py  data_processing.py  feature_engineering.py  intepretability.py  main.py  pipeline_builder.py  process.py  train_model.py  transformers.py  utils.py
tests/: Credit Risk ML FAST API.postman_collection.json  Credit_Risk_API.postman_collection.json
